[project]
name = "geesat"
version = "0.1.0"
description = ""
authors = [
    {name = "tuyenrss",email = "tuyenmassey@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api (>=1.6.11,<2.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "geesat", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
